--- a/.github/workflows/Matrix_workflow.yml
+++ b/.github/workflows/Matrix_workflow.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Install Dependencies
         run: npm ci
       - name: Build project
-        run: npm run buil
+        run: npm run build
   
